--- a/src/common/stylus/mixin.styl
+++ b/src/common/stylus/mixin.styl
@@ -17,3 +17,9 @@ extend-click()
     left: -10px
     right: -10px
     bottom: -10px
+
+loading-container()
+  position: absolute
+  width: 100%
+  top: 50%
+  transform: translateY(-50%)
